--- a/ASMC.Core/View/InputTableControl.xaml
+++ b/ASMC.Core/View/InputTableControl.xaml
@@ -10,19 +10,10 @@
              d:DesignHeight="450" d:DesignWidth="800">
     
       <StackPanel>
-        <ItemsControl ItemsSource="{Binding Path=Data, RelativeSource={RelativeSource AncestorType={x:Type view:InputTableControl}}}">
+        <ItemsControl ItemsSource="{Binding Path=Data, RelativeSource={RelativeSource AncestorType={x:Type view:InputTableControl}}}" Focusable="False">
               <ItemsControl.ItemsPanel>
                   <ItemsPanelTemplate>
-                      <Grid>
-                          <Grid.RowDefinitions>
-                              <RowDefinition Height="Auto" />
-                              <RowDefinition Height="Auto" />
-                          </Grid.RowDefinitions>
-                          <Grid.ColumnDefinitions>
-                              <ColumnDefinition Width="Auto" />
-                              <ColumnDefinition Width="Auto" />
-                          </Grid.ColumnDefinitions>
-                      </Grid>
+                    <UniformGrid />
                   </ItemsPanelTemplate>
               </ItemsControl.ItemsPanel>
               <ItemsControl.ItemContainerStyle>
