--- a/ASMC/View/WizardView.xaml
+++ b/ASMC/View/WizardView.xaml
@@ -13,7 +13,7 @@
              xmlns:ui1="clr-namespace:ASMC.Common.UI;assembly=ASMC.Common"
 
              mc:Ignorable="d"
-             d:DesignHeight="650" d:DesignWidth="800" MinWidth="800">
+             d:DesignHeight="650" d:DesignWidth="800" MinWidth="800" MaxHeight="1000">
     <UserControl.Resources>
         <ResourceDictionary>
             <dx:EnumToBoolConverter x:Key="EnumToBoolConverter" />
@@ -140,7 +140,7 @@
                 </Grid>
             </StackPanel>
             <Grid>
-                <TabControl  Name="TabControl1">
+                <TabControl  Name="TabControl1" Height="{Binding RelativeSource={RelativeSource AncestorType=Grid, Mode=FindAncestor}, Path=MaxHeight}">
                     <TabItem Header="Выбор СИ" IsSelected="{Binding SelectedTabItem, Converter={StaticResource EnumToBoolConverter}, ConverterParameter=ChoiceSi}">
                             <GroupBox Header="Выберете СИ:">
                                     <ListView ItemsSource="{Binding Prog}" SelectedItem="{Binding SelectProgram}">
