--- a/Plugins/DialIndicator/49310_12/Indicator_10/WpfControlLibrary1/View/MeasuringForceView.xaml
+++ b/Plugins/DialIndicator/49310_12/Indicator_10/WpfControlLibrary1/View/MeasuringForceView.xaml
@@ -7,7 +7,23 @@
              xmlns:view="clr-namespace:ASMC.Core.View;assembly=ASMC.Core"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-        <view:InputTableControl Data="{Binding Cells}" RowCount="{Binding RowCount}"  /> 
+    <Grid Width="800" Height="800">
+        <ItemsControl ItemsSource="{Binding Content}">
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <GroupBox Header="{Binding Path=Header}">
+                        <view:InputTableControl Data="{Binding Path=Cells}" />
+                    </GroupBox>
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+        </ItemsControl>
     </Grid>
+ 
+
+        <!--<GroupBox Header="Обратный ход">
+            <view:InputTableControl Data="{Binding Content[1].Cells}" />
+        </GroupBox>
+        <GroupBox Header="Усилие">
+            <view:InputTableControl Data="{Binding Content[2].Cells}" />
+        </GroupBox>-->
 </UserControl>
