--- a/ASMC.Core/View/InputTableControl.xaml
+++ b/ASMC.Core/View/InputTableControl.xaml
@@ -7,6 +7,7 @@
              xmlns:behavior="clr-namespace:ASMC.Common.Behavior;assembly=ASMC.Common"
              xmlns:view="clr-namespace:ASMC.Core.View"
              xmlns:ui="clr-namespace:ASMC.Common.UI;assembly=ASMC.Common"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     
@@ -14,9 +15,7 @@
         <ItemsControl ItemsSource="{Binding Path=Data, RelativeSource={RelativeSource AncestorType={x:Type view:InputTableControl}}}"  Focusable="False">
               <ItemsControl.ItemsPanel>
                   <ItemsPanelTemplate>
-                    <UniformGrid Rows="{Binding CountRow}" Columns="{Binding CountColumn}" >
-                        <behavior:IsFocesedUi></behavior:IsFocesedUi>
-                    </UniformGrid>
+                    <UniformGrid Rows="{Binding CountRow}" Columns="{Binding CountColumn}" />
 
                 </ItemsPanelTemplate>
               </ItemsControl.ItemsPanel>
@@ -28,10 +27,15 @@
 
               </ItemsControl.ItemContainerStyle>
               <ItemsControl.ItemTemplate>
+
                   <DataTemplate>
-                        <ui:ValueContentControl Header="{Binding Path=Name}" Margin="5,5,5,0" >
-                            <TextBox Text="{Binding Path=Value}" IsReadOnly="{Binding IsOnlyRead, RelativeSource={RelativeSource AncestorType={x:Type view:InputTableControl}}}" />
-                        </ui:ValueContentControl>
+                        <!--<ui:ValueContentControl Header="{Binding Path=Name}" Margin="5,5,5,0" >-->
+                    <TextBox Text="{Binding Path=Value}" IsReadOnly="{Binding IsOnlyRead, RelativeSource={RelativeSource AncestorType={x:Type view:InputTableControl}}}">
+                        <i:Interaction.Behaviors>
+                            <behavior:IsFocesedUi SelectValue ="{Binding RelativeSource={RelativeSource AncestorType=UserControl, Mode=FindAncestor}, Path=SelectValue, Mode=TwoWay}"/>
+                        </i:Interaction.Behaviors>
+                    </TextBox>
+                    <!--</ui:ValueContentControl>-->
                   </DataTemplate>
               </ItemsControl.ItemTemplate>
         </ItemsControl>
