--- a/ASMC/View/SettingView.xaml
+++ b/ASMC/View/SettingView.xaml
@@ -1,94 +1,23 @@
 ﻿<UserControl x:Class="ASMC.View.SettingView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:ASMC.View"
-             mc:Ignorable="d" 
+             xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
+             xmlns:ui="clr-namespace:ASMC.Core.UI;assembly=ASMC.Core"
+             xmlns:ui1="clr-namespace:ASMC.Common.UI;assembly=ASMC.Common"
+             mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800">
-  <UserControl.Resources>
-    <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
-  </UserControl.Resources>
+    <UserControl.Resources>
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+    </UserControl.Resources>
     <StackPanel>
-
-
         <GroupBox Header="Обслуживаемое средство" Visibility="{DXBinding 'TestDevice.Count != 0', Converter={StaticResource BooleanToVisibilityConverter}}">
-      <ListView ItemsSource="{Binding TestDevice}" >
-        <ListView.View>
-          <GridView  AllowsColumnReorder="False">
-            <GridViewColumn Header="Имя устройства" Width="150"  >
-              <GridViewColumn.CellTemplate >
-                <DataTemplate>
-                    <StackPanel>
-                    <ComboBox Margin="5,10,5,10" MinWidth="100" ItemsSource="{Binding Path=Devices}" DisplayMemberPath="UserType" SelectedItem="{Binding SelectedDevice}" Visibility="{DXBinding 'Devices.Count gt 1', Converter={StaticResource BooleanToVisibilityConverter}}"/>
-                    <TextBlock Text="{Binding SelectedDevice.UserType}" Visibility="{DXBinding 'Devices.Count==1', Converter={StaticResource BooleanToVisibilityConverter}}"/>
-                    </StackPanel>
-                </DataTemplate>
-              </GridViewColumn.CellTemplate>
-            </GridViewColumn>
-            <GridViewColumn Header="Строка подключения" Width="150" >
-              <GridViewColumn.CellTemplate >
-                <DataTemplate>
-                    <ComboBox Margin="5,10,5,10"  MinWidth="100" ItemsSource="{Binding Path=AddresDivece}" SelectedItem="{Binding StringConnect}" />
-                </DataTemplate>
-              </GridViewColumn.CellTemplate>
-            </GridViewColumn>
-            <GridViewColumn Header="Статус" Width="50" >
-              <GridViewColumn.CellTemplate >
-                <DataTemplate>
-                                    <TextBlock  Margin="5,10,5,10" Text="{Binding IsConnect}" Visibility="{Binding IsCanStringConnect, Converter={StaticResource BooleanToVisibilityConverter}}" />
-                </DataTemplate>
-              </GridViewColumn.CellTemplate>
-            </GridViewColumn>
-            <GridViewColumn Header="Описание" Width="Auto" >
-              <GridViewColumn.CellTemplate >
-                <DataTemplate>
-                  <TextBlock TextWrapping="Wrap"  Margin="5,10,5,10" Text="{Binding Path=Description}"    />
-                </DataTemplate>
-              </GridViewColumn.CellTemplate>
-            </GridViewColumn>
-          </GridView>
-        </ListView.View>
-      </ListView>
-    </GroupBox>
+            <local:DeviceView DataContext="{Binding TestDevice}" />
+        </GroupBox>
         <GroupBox Header="Средства используемые для метрологического контроля" Visibility="{DXBinding 'ControlDevice.Count !=0', Converter={StaticResource BooleanToVisibilityConverter}}">
-      <ListView ItemsSource="{Binding ControlDevice}" >
-        <ListView.View>
-          <GridView  AllowsColumnReorder="False">
-            <GridViewColumn Header="Имя устройства" Width="150"  >
-              <GridViewColumn.CellTemplate >
-                <DataTemplate>
-                    <StackPanel>
-                                        <ComboBox Margin="5,10,5,10" MinWidth="100" ItemsSource="{Binding Path=Devices}" DisplayMemberPath="UserType" SelectedItem="{Binding SelectedDevice}" Visibility="{DXBinding 'Devices.Count gt 1', Converter={StaticResource BooleanToVisibilityConverter}}"/>
-                                    <TextBlock Text="{Binding SelectedDevice.UserType}" Visibility="{DXBinding 'Devices.Count==1', Converter={StaticResource BooleanToVisibilityConverter}}"/>
-                                        </StackPanel>
-                </DataTemplate>
-              </GridViewColumn.CellTemplate>
-            </GridViewColumn>
-            <GridViewColumn Header="Строка подключения" Width="150" >
-              <GridViewColumn.CellTemplate >
-                <DataTemplate>
-                  <ComboBox Margin="5,10,5,10"  MinWidth="100" ItemsSource="{Binding Path=AddresDivece}" Visibility="{Binding Path=IsCanStringConnect, Converter={StaticResource BooleanToVisibilityConverter}}" SelectedItem="{Binding StringConnect}"/>
-                </DataTemplate>
-              </GridViewColumn.CellTemplate>
-            </GridViewColumn>
-            <GridViewColumn Header="Статус" Width="50" >
-              <GridViewColumn.CellTemplate >
-                <DataTemplate>
-                                    <TextBlock  Margin="5,10,5,10" Text="{Binding IsConnect}" Visibility="{Binding IsCanStringConnect, Converter={StaticResource BooleanToVisibilityConverter}}"  />
-                </DataTemplate>
-              </GridViewColumn.CellTemplate>
-            </GridViewColumn>
-            <GridViewColumn Header="Описание" Width="Auto" >
-              <GridViewColumn.CellTemplate >
-                <DataTemplate>
-                  <TextBlock TextWrapping="Wrap"  Margin="5,10,5,10" Text="{Binding Path=Description}"    />
-                </DataTemplate>
-              </GridViewColumn.CellTemplate>
-            </GridViewColumn>
-          </GridView>
-        </ListView.View>
-      </ListView>
-    </GroupBox>
-  </StackPanel>
+            <local:DeviceView DataContext="{Binding ControlDevice}" />
+        </GroupBox>
+    </StackPanel>
 </UserControl>
