--- a/Plugins/DialIndicator/49310_12/Indicator_10/WpfControlLibrary1/View/PerpendicularPressureView.xaml
+++ b/Plugins/DialIndicator/49310_12/Indicator_10/WpfControlLibrary1/View/PerpendicularPressureView.xaml
@@ -1,16 +1,15 @@
-﻿<UserControl x:Class="Indicator_10.View.MeasuringForceView"
+﻿<UserControl x:Class="Indicator_10.View.PerpendicularPressureView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Indicator_10.View"
-             xmlns:view="clr-namespace:ASMC.Core.View;assembly=ASMC.Core"
-             xmlns:view1="clr-namespace:ASMC.Common.View;assembly=ASMC.Common"
+             xmlns:view="clr-namespace:ASMC.Common.View;assembly=ASMC.Common"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <StackPanel>
-        <GroupBox Header="Введите измереное значение с весов в граммах." Margin="20" Focusable="False">
-            <view1:MultiGridView/>
+        <GroupBox Header="Изменение показаний индикатора, делений шкалы." Margin="20" Focusable="False">
+            <view:MultiGridView/>
         </GroupBox>
         <Button Content="Подтвердить" Command="{Binding SelectCommand}"/>
     </StackPanel>
