--- a/ASMC/App.xaml
+++ b/ASMC/App.xaml
@@ -13,13 +13,12 @@
                               WindowShowMode="Default"
                               Title="ASMC"
                               SizeToContent="WidthAndHeight">
-
                 <!--<dxmvvm:WindowService.SettingsSelector>
                     <asmc:ViewSettingsSelector />
                 </dxmvvm:WindowService.SettingsSelector>-->
             </ui:WindowService>
 
-            <ui:WindowService x:Key="FreeWindow" WindowShowMode="Dialog" SizeToContent="WidthAndHeight"/>
+            <ui:SelectionService x:Key="SelectionService"/>
 
         </ResourceDictionary>
     </Application.Resources>
