--- a/ASMC.Devices.UInterface/TRM/View/TrmSettingView.xaml
+++ b/ASMC.Devices.UInterface/TRM/View/TrmSettingView.xaml
@@ -4,11 +4,35 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ASMC.Devices.UInterface.TRM.View"
+             xmlns:ui="clr-namespace:ASMC.Core.UI;assembly=ASMC.Core"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            <ComboBox Grid.Row ="0"/>
-            <ComboBox Grid.Row ="0"/>
+    <Grid >
+<Grid.Resources>
+    <Style TargetType="ui:ValueContentControl">
+        <Setter Property="Orientation" Value="Horizontal"/>
+        <Setter Property="Margin" Value="10,0,10,5"/>
+    </Style>
+</Grid.Resources>
+        <Grid.RowDefinitions>
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+        <ui:ValueContentControl Header="ggfgf" Grid.Row ="0">
+            <ComboBox ItemsSource="{Binding BaudSpeedRatesArr}"
+                      SelectedItem="{Binding BaudSpeedRates}"
+                      DisplayMemberPath=""/>
+        </ui:ValueContentControl>
+        <ui:ValueContentControl Grid.Row ="1">
+            <ComboBox  ItemsSource="{Binding  }"
+                       SelectedItem="{Binding }"
+                       DisplayMemberPath=""/>
+        </ui:ValueContentControl>
+        <ui:ValueContentControl Grid.Row ="2">
+            <TextBox Text="{Binding }"/>
+        </ui:ValueContentControl>
+          
             
 
             
