--- a/ASMC/Themes/ValueContentControl.xaml
+++ b/ASMC/Themes/ValueContentControl.xaml
@@ -10,7 +10,7 @@
         Data="M 0,4 L 4,0 L 8,4 z"
         Fill="{Binding Foreground, RelativeSource={RelativeSource AncestorType=Button}}"/>
 
-  <Style TargetType="ui1:ValueContentControl">
+    <Style  x:Key="DefaultValueContentControl" TargetType="ui1:ValueContentControl">
     <Setter Property="Orientation" Value="Vertical" />
     <Setter Property="Padding" Value="0,0,0,4" />
     <Setter Property="HorizontalContentAlignment" Value="Stretch" />
