--- a/ASMC.Devices.UInterface/TRM/View/TrmSettingView.xaml
+++ b/ASMC.Devices.UInterface/TRM/View/TrmSettingView.xaml
@@ -9,7 +9,7 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid >
 <Grid.Resources>
-    <Style TargetType="ui:ValueContentControl">
+    <Style TargetType="ui:ValueContentControl" BasedOn="value">
         <Setter Property="Orientation" Value="Horizontal"/>
         <Setter Property="Margin" Value="10,0,10,5"/>
     </Style>
@@ -19,7 +19,7 @@
             <RowDefinition />
             <RowDefinition />
         </Grid.RowDefinitions>
-        <ui:ValueContentControl Header="ggfgf" Grid.Row ="0">
+        <ui:ValueContentControl Header="Скорость обмена данных с прибором:" Grid.Row ="0">
             <ComboBox ItemsSource="{Binding BaudSpeedRatesArr}"
                       SelectedItem="{Binding BaudSpeedRates}" Width="100" Height="30"
                       />
