--- a/ASMC.Devices.UInterface/TRM/View/TrmSettingView.xaml
+++ b/ASMC.Devices.UInterface/TRM/View/TrmSettingView.xaml
@@ -5,36 +5,34 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ASMC.Devices.UInterface.TRM.View"
              xmlns:ui="clr-namespace:ASMC.Core.UI;assembly=ASMC.Core"
+             xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid >
-<Grid.Resources>
-    <Style TargetType="ui:ValueContentControl" BasedOn="value">
-        <Setter Property="Orientation" Value="Horizontal"/>
-        <Setter Property="Margin" Value="10,0,10,5"/>
-    </Style>
-</Grid.Resources>
-        <Grid.RowDefinitions>
-            <RowDefinition />
-            <RowDefinition />
-            <RowDefinition />
-        </Grid.RowDefinitions>
-        <ui:ValueContentControl Header="Скорость обмена данных с прибором:" Grid.Row ="0">
-            <ComboBox ItemsSource="{Binding BaudSpeedRatesArr}"
-                      SelectedItem="{Binding BaudSpeedRates}" Width="100" Height="30"
-                      />
-        </ui:ValueContentControl>
-        <!--<ui:ValueContentControl Grid.Row ="1">
-            <ComboBox  ItemsSource="{Binding  }"
-                       SelectedItem="{Binding }"
-                       />
-        </ui:ValueContentControl>
-        <ui:ValueContentControl Grid.Row ="2">
-            <TextBox Text="{Binding }"/>
-        </ui:ValueContentControl>-->
-          
-            
+       
+    <StackPanel >
+        <Grid >
+            <Grid.RowDefinitions>
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <ui:ValueContentControl Header="ВНИМАНИЕ" Grid.Row="0" Orientation="Horizontal" Margin="10,0,10,5">
+                <TextBlock Text="настройки, выбираемые в этом окне, должны соответствовать настройкам поверяемого прибора! Работа с прибором осуществляется по протоколу ОВЕН." TextWrapping="Wrap" />
+            </ui:ValueContentControl>
+            <ui:ValueContentControl Header="Скорость обмена данных с прибором" Grid.Row ="1" Orientation="Horizontal" Margin="10,0,10,5">
+                <ComboBox ItemsSource="{Binding BaudSpeedRatesArrView}"
+                          SelectedItem="{Binding BaudSpeedRatesView}" MinWidth="50"/>
+            </ui:ValueContentControl>
+            <ui:ValueContentControl Header="Длина сетевого адреса" Grid.Row ="2" Orientation="Horizontal" Margin="10,0,10,5">
+                <ComboBox   ItemsSource="{Binding NetAddresArrView}"
+                            SelectedItem="{Binding NetAddresView}"
+                />
+            </ui:ValueContentControl>
+            <ui:ValueContentControl Header="Адрес прибора" Grid.Row ="3" Orientation="Horizontal" Margin="10,0,10,5">
+                <xctk:IntegerUpDown Text="{Binding AddresView, UpdateSourceTrigger=PropertyChanged}" Maximum="{Binding MaxAddresRangeValueView}"  Minimum ="0"  MinWidth="50" />
+            </ui:ValueContentControl>
 
-            
-    </Grid>
+        </Grid>
+    </StackPanel>
 </UserControl>
