--- a/Plugins/DialIndicator/49310_12/Indicator_10/WpfControlLibrary1/View/RangeIcdicationView.xaml
+++ b/Plugins/DialIndicator/49310_12/Indicator_10/WpfControlLibrary1/View/RangeIcdicationView.xaml
@@ -8,17 +8,22 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <DockPanel>
-        <StackPanel DockPanel.Dock="Left" >
-
-            <Image  Source="{Binding WebCam.VideoSourse}" Stretch="Fill" Height="250" Width="250"/>
-         
-            <Grid><Button Content="Установка нуля ППИ" Command="{Binding SetNullCommand}"/></Grid>
-        </StackPanel>
-        <StackPanel DataContext="{Binding Content}">
-       <HeaderedContentControl Header="{Binding Header}" Focusable="False" DockPanel.Dock="Right" >
-                <view:InputTableControl Name="Table" Data="{Binding Cells}" SelectValue="{Binding Selected}" />
-        </HeaderedContentControl>
-        </StackPanel>
-
-</DockPanel>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="50*"/>
+                <ColumnDefinition Width="50*"/>
+            </Grid.ColumnDefinitions>
+            <Image Grid.Column="0"  Source="{Binding WebCam.VideoSourse}" Stretch="Fill" MinWidth="400"/>
+            <StackPanel Grid.Row="0" Grid.Column="1" DataContext="{Binding Content}">
+                <HeaderedContentControl Header="{Binding Header}" Focusable="False" DockPanel.Dock="Right" >
+                    <view:InputTableControl Name="Table" Data="{Binding Cells}" SelectValue="{Binding Selected}" />
+                </HeaderedContentControl>
+            </StackPanel>
+            <Button Grid.Row="1" Grid.Column="0" Content="Установка нуля ППИ" Command="{Binding SetNullCommand}"/>
+        </Grid>
+    </DockPanel>
 </UserControl>
