--- a/Plugins/DialIndicator/49310_12/Indicator_10/WpfControlLibrary1/View/MeasuringForceView.xaml
+++ b/Plugins/DialIndicator/49310_12/Indicator_10/WpfControlLibrary1/View/MeasuringForceView.xaml
@@ -1,9 +1,8 @@
-﻿<UserControl x:Class="Indicator_10.View.MeasuringForceView"
+﻿<UserControl x:Class="mp2192_92.DialIndicator.View.MeasuringForceView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Indicator_10.View"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:view="clr-namespace:ASMC.Core.View;assembly=ASMC.Core"
              xmlns:view1="clr-namespace:ASMC.Common.View;assembly=ASMC.Common"
              mc:Ignorable="d" 
