--- a/Plugins/DialIndicator/49310_12/Indicator_10/WpfControlLibrary1/View/RangeIcdicationView.xaml
+++ b/Plugins/DialIndicator/49310_12/Indicator_10/WpfControlLibrary1/View/RangeIcdicationView.xaml
@@ -4,8 +4,14 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:view="clr-namespace:ASMC.Common.View;assembly=ASMC.Common"
+             xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
+             xmlns:ui="clr-namespace:ASMC.Common.UI;assembly=ASMC.Common"
+             xmlns:ui1="clr-namespace:ASMC.Core.UI;assembly=ASMC.Core"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <dxmvvm:Interaction.Behaviors>
+        <ui1:MessageBoxService />
+    </dxmvvm:Interaction.Behaviors>
     <DockPanel>
         <Grid>
             <Grid.RowDefinitions>
