--- a/Plugins/OWEN/TRM202/OWEN_TRM202/View/TermocupleView.xaml
+++ b/Plugins/OWEN/TRM202/OWEN_TRM202/View/TermocupleView.xaml
@@ -4,9 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:OWEN_TRM202.View"
+             xmlns:view="clr-namespace:ASMC.Common.View;assembly=ASMC.Common"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
-    </Grid>
+    <StackPanel Grid.Row="0" Grid.Column="1" DataContext="{Binding Content}">
+        <HeaderedContentControl Header="{Binding Header}" Focusable="False" DockPanel.Dock="Right" >
+            <view:InputTableControl Name="Table" Data="{Binding Cells}" SelectValue="{Binding Selected}" />
+        </HeaderedContentControl>
+    </StackPanel>
 </UserControl>
