--- a/Plugins/Test/Table.xaml
+++ b/Plugins/Test/Table.xaml
@@ -5,10 +5,11 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Plugins.Test"
              xmlns:view="clr-namespace:ASMC.Core.View;assembly=ASMC.Core"
+             xmlns:view1="clr-namespace:ASMC.Common.View;assembly=ASMC.Common"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <view:InputTableControl Data="{Binding TestData}" SelectValue="{Binding Selected}" /> 
+        <view1:InputTableControl Data="{Binding TestData}" SelectValue="{Binding Selected}" /> 
     </Grid>
     
 </UserControl>
