--- a/ASMC.Common/View/ShemView.xaml
+++ b/ASMC.Common/View/ShemView.xaml
@@ -1,28 +1,40 @@
 ﻿<UserControl x:Class="ASMC.Common.View.ShemView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:toolkit="http://schemas.xceed.com/wpf/xaml/toolkit"
              xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800" >
-  <UserControl.Resources>
-    <dx:ObjectToVisibilityConverter  Invert="True"   x:Key="ObjectToVisibilityConverterInverse"/>
-    <dx:ObjectToVisibilityConverter   x:Key="ObjectToVisibilityConverter" />
-  </UserControl.Resources>
-  <Grid>
-    <Grid.RowDefinitions>
-      <RowDefinition Height="10*"/>
-      <RowDefinition Height="80*"/>
-      <RowDefinition Height="20*"/>
-    </Grid.RowDefinitions>
-    <TextBlock TextAlignment="Center" Visibility="{Binding Text, Converter={StaticResource ObjectToVisibilityConverter}}"   Text="{Binding Shema.Description}" FontWeight="Bold" FontSize="14"/>
-    <Image Grid.Row="1" Source="{Binding PathImage}" Stretch="Uniform" />
-    <StackPanel Grid.Row="2" >
-      <TextBlock Visibility="{Binding Text, Converter={StaticResource ObjectToVisibilityConverterInverse}}"  Text="{Binding Shema.ExtendedDescription}"/>
-      <toolkit:RichTextBox Visibility="{Binding Text, Converter={StaticResource ObjectToVisibilityConverter}}" IsReadOnly="True"  Text="{Binding Text}"  BorderThickness="0" VerticalScrollBarVisibility="Auto"/>
+             mc:Ignorable="d"
+             d:DesignHeight="450" d:DesignWidth="800"
+             Name="StackPanelDescription">
+    <UserControl.Resources>
+        <dx:ObjectToVisibilityConverter Invert="True" x:Key="ObjectToVisibilityConverterInverse" />
+        <dx:StringToVisibilityConverter x:Key="StringToVisibilityConverter" />
+    </UserControl.Resources>
+    <StackPanel>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+            <TextBlock Grid.Row="0" TextAlignment="Center"
+                       Visibility="{Binding Text, Converter={StaticResource ObjectToVisibilityConverter}}"
+                       Text="{Binding Shema.Description}" FontWeight="Bold" FontSize="14" />
+            <Image Grid.Row="1" Source="{Binding PathImage}" Stretch='Uniform'
+                   Height="{DXBinding Expr='@e(StackPanelDescription).ActualHeight-@e(gridDescription).ActualHeight-20'}" />
+            <StackPanel Grid.Row="2">
+                <Grid Name="gridDescription">
+                    <TextBlock
+                        Visibility="{Binding Text, Converter={StaticResource ObjectToVisibilityConverterInverse}}"
+                        Text="{Binding Shema.ExtendedDescription}" />
+                    <toolkit:RichTextBox Name="RichTextBox1" Height="260"
+                                         Visibility="{Binding Text, Converter={StaticResource StringToVisibilityConverter }}"
+                                         IsReadOnly="True" Text="{Binding Text}" BorderThickness="0"
+                                         VerticalScrollBarVisibility="Auto" />
+                </Grid>
+            </StackPanel>
+        </Grid>
     </StackPanel>
-   
-  </Grid>
 </UserControl>
